--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     volumes:
       - ./.docker/postgres/data:/var/lib/postgresql/data
       - ./.docker/postgres/scripts/:/docker-entrypoint-initdb.d
+      - ./.docker/postgres/conf/postgresql.conf:/etc/postgresql/postgresql.conf
+    shm_size: 1g
     ports:
       - 5433:5432
   redis:
