boucle d'email + SETTING Environnement

--- a/.env.template
+++ b/.env.template
@@ -14,6 +14,10 @@ DB_PORT=5432
 # Read only DB settings
 DB_READONLY=postgres://apilos:apilos@postgres:5432/apilos
 
+# Application domain url for email
+APPLICATION_DOMAIN_URL=http://localhost:8000
+
+
 # Ecolo DB (optionnal & read-only)
 #ECOLO_DATABASE_URL=postgres://apilos:apilos@postgres:5432/ecolotest?currentSchema=ecolo
 
@@ -58,3 +62,6 @@ SIAP_CLIENT_HOST=https://minlog-siap.gateway.intapi.recette.sully-group.fr
 SIAP_CLIENT_PATH=/api-int/v0
 
 REDIS_URL=redis://redis:6379
+
+#SHELL_PLUS print sql variable
+SHELL_PLUS_PRINT_SQL=True
