--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,7 +136,11 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            tags:
+              only:
+                - /^v.*/
       - deploy_staging:
           requires:
             - build
