--- a/requirements.in
+++ b/requirements.in
@@ -30,6 +30,7 @@ python-decouple>=3.4
 python-docx>=0.8.11
 redis
 sentry-sdk>=1.5.1
+tenacity
 tqdm>=4.0
 typing-extensions>=3.10
 whitenoise>=5.3.0
