--- a/requirements.txt
+++ b/requirements.txt
@@ -102,6 +102,7 @@ django==4.2.1 \
     #   django-cas-ng
     #   django-celery-results
     #   django-csp
+    #   django-defender
     #   django-hijack
     #   django-sql-explorer
     #   django-storages
@@ -123,6 +124,10 @@ django-celery-results==2.5.1 \
 django-csp==3.7 \
     --hash=sha256:01443a07723f9a479d498bd7bb63571aaa771e690f64bde515db6cdb76e8041a \
     --hash=sha256:01eda02ad3f10261c74131cdc0b5a6a62b7c7ad4fd017fbefb7a14776e0a9727
+    # via -r requirements.in
+django-defender==0.9.7 \
+    --hash=sha256:479b4fd7e36798f7f09bf5dbb23ccb51362b4536a92a95641e84ea1db9346ec6 \
+    --hash=sha256:74431abaf0bac5a5619d9333d64725fc0ca57ccb2266e28a4f21ba08d4777df5
     # via -r requirements.in
 django-hijack==3.3.0 \
     --hash=sha256:795cd0087596a21c9bf641fa5cf1787f4edf144e16a423014afbcf2838e8e124 \
@@ -509,7 +514,9 @@ pyyaml==6.0 \
 redis==4.5.5 \
     --hash=sha256:77929bc7f5dab9adf3acba2d3bb7d7658f1e0c2f1cafe7eb36434e751c471119 \
     --hash=sha256:dc87a0bdef6c8bfe1ef1e1c40be7034390c2ae02d92dcd0c7ca1729443899880
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   django-defender
 requests==2.28.1 \
     --hash=sha256:7c5599b102feddaa661c826c56ab4fee28bfd17f5abca1ebbe3e7f19d7c97983 \
     --hash=sha256:8fefa2a1a1365bf5520aac41836fbee479da67864514bdb821f31ce07ce65349
