--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -41,6 +41,7 @@ jobs:
           coverage run --source='.' manage.py test
         env:
           DB_HOST: localhost
+          REDIS_URL: ""
       - name: Create coverage report
         run:
           coverage xml -o coverage.xml
