--- a/.pylintrc
+++ b/.pylintrc
@@ -7,6 +7,7 @@ ignore-paths=
     conventions/migrations,
     programmes/migrations,
     users/migrations,
+    instructeurs/migrations,
 disable=
     django-not-configured,
     C0103, # invalid-name
