--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -1,18 +1,32 @@
 version: "3"
 services:
   postgres:
-    image: postgres:12-alpine
+    image: postgres:15.2-alpine
     environment:
       - POSTGRES_USER=apilos
       - POSTGRES_PASSWORD=apilos
-      - POSTGRES_MULTIPLE_DATABASES=apilos-test
     volumes:
-      - ./pg-init-scripts:/docker-entrypoint-initdb.d
-      - ./pgdata:/var/lib/postgresql/data
+      - ./.docker/postgres/data:/var/lib/postgresql/data
+      - ./.docker/postgres/scripts/:/docker-entrypoint-initdb.d
+      - ./.docker/postgres/conf/postgresql.conf:/etc/postgresql/postgresql.conf
+    shm_size: 1g
     ports:
       - 5433:5432
+  redis:
+    image: redis:7.0
+    restart: always
+    expose:
+      - 6379
+    ports:
+      - 6379:6379
+    command: redis-server /usr/local/etc/redis/redis.conf
+    volumes:
+      - ./.docker/redis/data:/data:delegated
+      - ./.docker/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf
 
 volumes:
+  cache:
+    driver: local
   data:
     driver: local
   pgdata:
