Whitelist domains on which SIAP is enabled in a settings variable

--- a/.env.template
+++ b/.env.template
@@ -24,6 +24,7 @@ APPLICATION_DOMAIN_URL=http://localhost:8000
 SENDINBLUE_API_KEY=<SENDINBLUE_API_KEY>
 
 ALLOWED_HOSTS=test.apilos.beta.gouv.fr,test.apilos.logement.fr
+SIAP_DOMAINS=test.apilos.logement.fr
 
 # Comment AWS configuration block to store files locally in development
 # AWS_ACCESS_KEY_ID=<AWS_ACCESS_KEY_ID>
