Rendre Apilos multi domaines / multi sites (#796)
* Turn the webapp multi domain & cross authent

* Fix User.siap_habilitation static messing up with multi site management

* Whitelist domains on which SIAP is enabled in a settings variable

--- a/.env.template
+++ b/.env.template
@@ -22,7 +22,8 @@ APPLICATION_DOMAIN_URL=http://localhost:8000
 
 SENDINBLUE_API_KEY=
 
-ALLOWED_HOSTS=local.beta.gouv.fr
+ALLOWED_HOSTS=test.apilos.beta.gouv.fr,test.apilos.logement.fr
+SIAP_DOMAINS=test.apilos.logement.fr
 
 # Comment AWS configuration block to store files locally in development
 # AWS_ACCESS_KEY_ID=<AWS_ACCESS_KEY_ID>
@@ -48,7 +49,9 @@ CONVERTAPI_SECRET=<CONVERTAPI_SECRET>
 # CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
 
 # Used to test SIAP experience without link to SIAP API
-USE_MOCKED_SIAP_CLIENT=False
+USE_MOCKED_SIAP_CLIENT=true
+NO_SIAP_MENU=true
+CERBERE_MOCKED=True
 
 # ENV variable of APiLos API for SIAP
 JWT_SIGN_KEY=
