--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 SECRET_KEY=my-secret-key
 ENVIRONMENT=test
-DEBUG=False
+DEBUG=True
 SECURE_SSL_REDIRECT=True
 LOGLEVEL=ERROR
 
@@ -61,7 +61,7 @@ SIAP_CLIENT_ALGORITHM=HS256
 SIAP_CLIENT_HOST=https://minlog-siap.gateway.intapi.recette.sully-group.fr
 SIAP_CLIENT_PATH=/api-int/v0
 
-#REDIS_URL=redis://redis:6379
+#REDIS_URL=redis://localhost:6379
 
 #SHELL_PLUS print sql variable
 SHELL_PLUS_PRINT_SQL=True
