--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: 'coverage'
+name: "coverage"
 on:
   - pull_request
 
@@ -31,19 +31,17 @@ jobs:
         uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - name: Install dependencies
-        run:
-          pip install -r requirements.txt -r dev-requirements.txt
+        run: pip install -r requirements.txt -r dev-requirements.txt
       - name: Execute test with coverage
         run: |
-          cp .env.template .env.test
+          cp .env.citest .env.test
           coverage run --source='.' manage.py test
         env:
           DB_HOST: localhost
       - name: Create coverage report
-        run:
-          coverage xml -o coverage.xml
+        run: coverage xml -o coverage.xml
       - name: Post coverage to PR
         uses: orgoro/coverage@v3
         with:
