--- a/.env.template
+++ b/.env.template
@@ -7,20 +7,20 @@ LOGLEVEL=ERROR
 # Default DB settings
 DB_USER=apilos
 DB_NAME=apilos
-DB_HOST=postgres
+DB_HOST=localhost
 DB_PASSWORD=apilos
-DB_PORT=5432
+DB_PORT=5433
 
 # Read only DB settings
-DB_READONLY=postgres://apilos:apilos@postgres:5432/apilos
+DB_READONLY=postgres://apilos:apilos@localhost:5433/apilos
 
 # Application domain url for email
 APPLICATION_DOMAIN_URL=http://localhost:8000
 
 # Ecolo DB (optionnal & read-only)
-#ECOLO_DATABASE_URL=postgres://apilos:apilos@postgres:5432/ecolotest?currentSchema=ecolo
+# ECOLO_DATABASE_URL=postgres://apilos:apilos@postgres:5432/ecolotest?currentSchema=ecolo
 
-SENDINBLUE_API_KEY=<SENDINBLUE_API_KEY>
+SENDINBLUE_API_KEY=
 
 ALLOWED_HOSTS=local.beta.gouv.fr
 
@@ -40,8 +40,8 @@ SENTRY_URL=
 CONVERTAPI_SECRET=<CONVERTAPI_SECRET>
 
 # INSEE API settings
-#INSEE_API_KEY=<INSEE_API_KEY>
-#INSEE_API_SECRET=<INSEE_API_SECRET>
+# INSEE_API_KEY=<INSEE_API_KEY>
+# INSEE_API_SECRET=<INSEE_API_SECRET>
 
 # When CERBERE_AUTH is comment, the django authentication is used and APiLos behave without SIAP
 # Else, CERBERE authentication is used and experience is the SIAP one
@@ -60,7 +60,7 @@ SIAP_CLIENT_ALGORITHM=HS256
 SIAP_CLIENT_HOST=https://minlog-siap.gateway.intapi.recette.sully-group.fr
 SIAP_CLIENT_PATH=/api-int/v0
 
-#REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:6379
 
 #SHELL_PLUS print sql variable
 SHELL_PLUS_PRINT_SQL=True
