--- a/.github/workflows/s3_backup.yml
+++ b/.github/workflows/s3_backup.yml
@@ -18,21 +18,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Backup
+      - name: Install AWS CLI dependencies
         run: |
           pip install awscli
           pip install awscli-plugin-endpoint
+      - name: configure AWS CLI for Scaleway
+        run: |
           aws configure set plugins.endpoint awscli_plugin_endpoint
           aws configure set s3.endpoint_url ${{ env.S3_HOST }}
           aws configure set s3api.endpoint_url ${{ env.S3_HOST }}
-          pip install awscli-plugin-endpoint
-          mkdir ${{ env.BACKUP_NAME }}
-          aws s3 cp --recursive --dryrun ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
-          aws s3 cp --recursive ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
-          tar cfz ${{ env.BACKUP_NAME }}.tar.gz ${{ env.BACKUP_NAME }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_KEY }}
+      - name: Backup in dry run mode
+        run: |
+          mkdir ${{ env.BACKUP_NAME }}
+          aws s3 cp --recursive --dryrun ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
+      - name: Backup
+        run: aws s3 cp --recursive ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
+      - name: Compress backup
+        run: tar cfz ${{ env.BACKUP_NAME }}.tar.gz ${{ env.BACKUP_NAME }}
       - name: Upload Backup as Artifact
         uses: actions/upload-artifact@v2
         with:
