--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - 5433:5432
   redis:
     image: redis:7.0
-    restart: always
+    restart: unless-stopped
     expose:
       - 6379
     command: redis-server /usr/local/etc/redis/redis.conf
