--- a/.github/workflows/s3_backup.yml
+++ b/.github/workflows/s3_backup.yml
@@ -33,10 +33,10 @@ jobs:
           aws configure set s3.max_queue_size 1000
           aws configure set s3.multipart_threshold '50 MB'
           aws configure set s3api.endpoint_url ${{ env.S3_HOST }}
-      - name: Backup in dry run mode
-        run: |
-          mkdir ${{ env.BACKUP_NAME }}
-          aws s3 cp --recursive --dryrun ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
+      # - name: Backup in dry run mode
+      #   run: |
+      #     mkdir ${{ env.BACKUP_NAME }}
+      #     aws s3 cp --recursive --dryrun ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
       - name: Backup
         run: aws s3 cp --recursive ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
       - name: Compress backup
