Add django stubs and honcho to dev dependencies

--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -6,7 +6,9 @@ coverage[toml]
 django-browser-reload
 django-debug-toolbar
 django-extensions
+django-stubs
 djhtml
+honcho
 pre-commit
 ptpython
 pylint
