--- a/.env.template
+++ b/.env.template
@@ -69,3 +69,5 @@ TEST_DOT_ENV_FILE=.env.test.local
 # ClamAV
 # enable this environment variable if you need to test ClamAV implementation
 # CLAMAV_SERVICE_URL=http://localhost:3320
+# CLAMAV_SERVICE_USER=app1
+# CLAMAV_SERVICE_PASSWORD=letmein
