--- a/.env.template
+++ b/.env.template
@@ -65,3 +65,9 @@ REDIS_URL=redis://localhost:6379
 #SHELL_PLUS print sql variable
 SHELL_PLUS_PRINT_SQL=True
 TEST_DOT_ENV_FILE=.env.test.local
+
+# ClamAV
+# enable this environment variable if you need to test ClamAV implementation
+# CLAMAV_SERVICE_URL=http://localhost:3320
+# CLAMAV_SERVICE_USER=app1
+# CLAMAV_SERVICE_PASSWORD=letmein
