--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install dependencies
-        run: pip install -r requirements.txt -r dev-requirements.txt
+        run: make install_requirements
       - name: Execute test with coverage
         run: |
           coverage run --source='.' manage.py test
