--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:MTES-MCT/apilos.git"
+  },
   "dependencies": {
-    "@gouvfr/dsfr": "^1.9.3",
+    "@gouvfr/dsfr": "^1.10.2",
     "@hotwired/turbo": "^7.3.0",
     "virtual-select-plugin": "^1.0.40"
   }
