--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,6 +10,10 @@ on:
 permissions:
   pull-requests: write
 
+env:
+  DATABASE_URL: postgres://apilos:apilos@localhost:5432/apilos
+  DB_READONLY: postgres://apilos:apilos@localhost:5432/apilos
+
 jobs:
   coverage:
     name: Test & Coverage
@@ -42,12 +46,12 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: pip install -r requirements.txt -r dev-requirements.txt
+      - name: Check migrations
+        run: |
+          python manage.py makemigrations --check --dry-run
       - name: Execute test with coverage
         run: |
           coverage run --source='.' manage.py test
-        env:
-          DATABASE_URL: postgres://apilos:apilos@localhost:5432/apilos
-          DB_READONLY: postgres://apilos:apilos@localhost:5432/apilos
       - name: Create coverage report
         run: coverage xml -o coverage.xml
       - name: Post coverage to PR
