--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -1,8 +1,10 @@
 name: "Test and deploy to staging"
+# on:
+#   push:
+#     branches:
+#       - main
 on:
-  push:
-    branches:
-      - main
+  - pull_request
 
 
 # Explicitely set permissions to allow Dependabot workflow runs to write in the PR
