--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -21,8 +21,8 @@ env:
   DEBUG: False
 
 jobs:
-  coverage:
-    name: Test & Coverage
+  test:
+    name: Test
 
     # Service containers to run with `container-job`
     services:
@@ -62,6 +62,7 @@ jobs:
   deploy_to_staging:
     name: "Deploy to staging"
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
