--- a/requirements.in
+++ b/requirements.in
@@ -1,35 +1,35 @@
-api-insee>=1.5
-boto3>=1.24.23
-celery>=5.2.0
-convertapi>=1.4.0
-dj-database-url>=1
-dj-static>=0.0.6
-dj-static>=0.0.6
+api-insee
+boto3
+celery<6.0
+convertapi
+dj-database-url
+dj-static
+dj-static
 django-anymail[sendinblue]
-django-cas-ng>=4.3.0
-django-celery-results>=2.4.0
-django-csp>=3.7
-django-defender>=0.9
-django-hijack>=3.2
+django-cas-ng
+django-celery-results
+django-csp
+django-defender
+django-hijack
 django-simple-history
 django-sql-explorer[xls]
-django-storages>=1.11.1
-Django>=4.1,<5.0
-djangorestframework-simplejwt>=5.2.0
-djangorestframework>=3.12.4
-docxtpl>=0.12.0
-drf-spectacular>=0.24.0
-gunicorn>=20.1.0
-Jinja2>=3.0.2
-openpyxl>=3.0.7
-psycopg2>=2.9
-pyjwt>=2.4.0
-python-box>=6.0
-python-decouple>=3.4
-python-docx>=0.8.11
+django-storages
+Django<5.0
+djangorestframework-simplejwt
+djangorestframework
+docxtpl
+drf-spectacular
+gunicorn
+Jinja2
+openpyxl
+psycopg2
+pyjwt
+python-box
+python-decouple
+python-docx
 redis
-sentry-sdk>=1.5.1
+sentry-sdk
 tenacity
-tqdm>=4.0
-typing-extensions>=3.10
-whitenoise>=5.3.0
+tqdm
+typing-extensions
+whitenoise
