--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -40,12 +40,15 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.10.8"
+
       - name: Install dependencies
         run: pip install -r requirements.txt -r dev-requirements.txt
+
       - name: Check migrations
         run: |
           python manage.py makemigrations --check --dry-run
+
       - name: Execute test
         run: |
-          python manage.py test
+          python -m pytest
