--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,3 @@
-[tool.darker]
-src = [
-    "core",
-    "bailleurs",
-    "conventions",
-    "instructeurs",
-    "programmes",
-    "stats",
-    "users",
-]
-diff = true
-check = false
-isort = false
-lint = [
-    "pylint",
-]
-log_level = "INFO"
-
 [tool.coverage.run]
 omit = [
     "*/__init__.py",
@@ -27,3 +9,75 @@ omit = [
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "core.settings"
+
+[tool.ruff]
+select = [
+    "F",   # Pyflakes
+    "E",   # pycodestyle
+    "W",   # pycodestyle
+    "C90", # mccabe
+    # TODO: apply the following rules
+    # "I",   # isort
+    # "UP",  # pyupgrade
+    # "N",   # pep8-naming
+    # "BLE", # flake8-blind-except
+    # "FBT", # flake8-boolean-trap
+    # "B",   # flake8-bugbear
+    # "C4",  # flake8-comprehensions
+    # "ISC", # flake8-implicit-str-concat
+    # "T20", # flake8-print
+    "Q",   # flake8-quotes
+    "TID", # flake8-tidy-imports
+    "PGH", # pygrep-hooks
+    "INP", # flake8-no-pep420
+]
+line-length = 120
+show-fixes = true
+unfixable = ["B"]
+target-version = "py310"
+exclude = [
+    ".venv",
+    "bin",
+    "documents",
+    "node_modules",
+    "staticfiles",
+    "templates",
+]
+
+[tool.ruff.extend-per-file-ignores]
+"__init__.py" = ["F401", "F403"]
+"scripts/*.py" = ["INP001"]
+"**/migrations/*.py" = ["E501"]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 20 # TODO: very high value, reduce to 10
+
+[tool.ruff.isort]
+case-sensitive = true
+known-third-party = [
+    "boto3",
+    "botocore",
+    "celery",
+    "decouple",
+    "dj_database_url",
+    "django_cas_ng",
+    "django",
+    "docx",
+    "drf_spectacular",
+    "openpyxl",
+    "rest_framework_simplejwt",
+    "rest_framework",
+    "sentry_sdk",
+    "siap",
+    "simple_history",
+    "storages",
+    "zipfile",
+]
+split-on-trailing-comma = true
+section-order = [
+    "future",
+    "standard-library",
+    "third-party",
+    "first-party",
+    "local-folder",
+]
