--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ select = [
     "C90", # mccabe
     # TODO: apply the following rules
     # "I",   # isort
-    # "UP",  # pyupgrade
+    "UP",  # pyupgrade
     # "N",   # pep8-naming
     # "BLE", # flake8-blind-except
     # "FBT", # flake8-boolean-trap
