--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ omit = [
     "*/migrations/*",
     "ecoloweb/*",
     "programmes/management/commands/import_galion.py",
+    "conventions/services/convention_generator.py", # TODO : fix coverage of this file
 ]
 
 [tool.pytest.ini_options]
