--- a/.env.template
+++ b/.env.template
@@ -57,7 +57,7 @@ JWT_ALGORITHM=HS256
 # Env variable to set SIAP client API
 SIAP_CLIENT_JWT_SIGN_KEY=
 SIAP_CLIENT_ALGORITHM=HS256
-SIAP_CLIENT_HOST=https://minlog-siap.gateway.intapi.recette.sully-group.fr
+SIAP_CLIENT_HOST=https://minlog-siap.gateway.intapi.recette.sully-infra.fr
 SIAP_CLIENT_PATH=/api-int/v0
 
 REDIS_URL=redis://localhost:6379
