--- a/requirements.txt
+++ b/requirements.txt
@@ -189,6 +189,7 @@ django==4.2.9 \
     #   django-hijack
     #   django-sql-explorer
     #   django-storages
+    #   django-waffle
     #   djangorestframework
     #   djangorestframework-simplejwt
     #   drf-spectacular
@@ -227,6 +228,10 @@ django-sql-explorer[xls]==3.2.1 \
 django-storages==1.14.2 \
     --hash=sha256:1db759346b52ada6c2efd9f23d8241ecf518813eb31db9e2589207174f58f6ad \
     --hash=sha256:51b36af28cc5813b98d5f3dfe7459af638d84428c8df4a03990c7d74d1bea4e5
+    # via -r requirements.in
+django-waffle==4.1.0 \
+    --hash=sha256:5979a2f3dd674ef7086480525b39651fc2045427f6d8e6a614192656d3402c5b \
+    --hash=sha256:e49d7d461d89f3bd8e53f20efe39310acca8f275c9888495e68e195345bf18b1
     # via -r requirements.in
 djangorestframework==3.14.0 \
     --hash=sha256:579a333e6256b09489cbe0a067e66abe55c6595d8926be6b99423786334350c8 \
