--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,9 @@ select = [
     "C90", # mccabe
     "I",   # isort
     "UP",  # pyupgrade
+    "N",   # pep8-naming
     # TODO: apply the following rules
-    # "N",   # pep8-naming
     # "BLE", # flake8-blind-except
-    # "FBT", # flake8-boolean-trap
     # "B",   # flake8-bugbear
     # "C4",  # flake8-comprehensions
     # "ISC", # flake8-implicit-str-concat
@@ -50,7 +49,7 @@ exclude = [
 [tool.ruff.extend-per-file-ignores]
 "__init__.py" = ["F401", "F403"]
 "scripts/*.py" = ["INP001"]
-"**/migrations/*.py" = ["E501"]
+"**/migrations/*.py" = ["E501", "N806"]
 # TODO: ignored because of low coverage, fix and remove
 "conventions/services/upload_objects.py" = ["UP"]
 "conventions/services/recapitulatif.py" = ["UP"]
