--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,9 @@ select = [
     "I",   # isort
     "UP",  # pyupgrade
     "N",   # pep8-naming
+    "B",   # flake8-bugbear
     # TODO: apply the following rules
     # "BLE", # flake8-blind-except
-    # "B",   # flake8-bugbear
     # "C4",  # flake8-comprehensions
     # "ISC", # flake8-implicit-str-concat
     # "T20", # flake8-print
