POC which generate pdf file from docx locally using libreoffice

--- a/.env.template
+++ b/.env.template
@@ -71,3 +71,6 @@ TEST_DOT_ENV_FILE=.env.test.local
 # CLAMAV_SERVICE_URL=http://localhost:3320
 # CLAMAV_SERVICE_USER=app1
 # CLAMAV_SERVICE_PASSWORD=letmein
+
+# LibreOffice for MacOS
+LIBREOFFICE_EXEC=/Applications/LibreOffice.app/Contents/MacOS/soffice
