--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ omit = [
     "programmes/management/commands/import_galion.py",
     # TODO: add tests on the following modules and remove them from this list
     "conventions/services/upload_objects.py",
+    "core/models.py",
 ]
 
 [tool.pytest.ini_options]
