check collectstatic is not broken

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -49,6 +49,10 @@ jobs:
         run: |
           python manage.py makemigrations --check --dry-run
 
+      - name: Check collectstatic
+        run: |
+          python manage.py collectstatic --noinput --dry-run
+
       - name: Execute test
         run: |
           python -m pytest
