--- a/.github/workflows/push-pull-request.yml
+++ b/.github/workflows/push-pull-request.yml
@@ -51,7 +51,7 @@ jobs:
           python-version: "3.10.8"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt -r dev-requirements.txt
+        run: pip install --no-deps -r requirements.txt -r dev-requirements.txt
 
       - name: Check migrations
         run: |
