Upgrade to Python 3.12

--- a/requirements.in
+++ b/requirements.in
@@ -16,18 +16,20 @@ django-sql-explorer[xls]
 django-storages
 django-waffle
 Django<5.0
-djangorestframework-simplejwt
 djangorestframework
+djangorestframework-simplejwt
 docxtpl
 drf-spectacular
 gunicorn
 Jinja2
+lxml>=5.0
 openpyxl
 psycopg2
 pyjwt
 python-box
 python-decouple
 python-docx
+pyyaml>=6.0
 redis
 sentry-sdk
 tenacity
