--- a/.github/workflows/push-pull-request.yml
+++ b/.github/workflows/push-pull-request.yml
@@ -48,10 +48,12 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.10.8"
+          python-version: "3.12.2"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt -r dev-requirements.txt
+        run: |
+          pip install pip-tools
+          pip install -r requirements.txt -r dev-requirements.txt
 
       - name: Check migrations
         run: |
