--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -38,12 +38,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.10.8"
+          python-version: "3.12.2"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt -r dev-requirements.txt
+        run: |
+          pip install pip-tools
+          pip install -r requirements.txt -r dev-requirements.txt
 
       - name: Check migrations
         run: |
