--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ node_modules/
 #temporaire
 /.tgitconfig
 
+
+# celery beat schedule files
+celerybeat-schedule.dat
+celerybeat-schedule.dir
+celerybeat-schedule.bak
