Remve ConvertAPI dependency and use libreoffice to generate pdf file from docx (#1202)

--- a/.env.template
+++ b/.env.template
@@ -36,9 +36,6 @@ ALLOWED_HOSTS=local.beta.gouv.fr
 # Comment sentry setting to deactivate it
 SENTRY_URL=
 
-# Comment convertapi setting to deactivate it
-CONVERTAPI_SECRET=<CONVERTAPI_SECRET>
-
 # INSEE API settings
 # INSEE_API_KEY=<INSEE_API_KEY>
 # INSEE_API_SECRET=<INSEE_API_SECRET>
@@ -71,3 +68,6 @@ TEST_DOT_ENV_FILE=.env.test.local
 # CLAMAV_SERVICE_URL=http://localhost:3320
 # CLAMAV_SERVICE_USER=app1
 # CLAMAV_SERVICE_PASSWORD=letmein
+
+# LibreOffice for MacOS
+LIBREOFFICE_EXEC=/Applications/LibreOffice.app/Contents/MacOS/soffice
